# gas-monitor-tesis

./: .gitignore  README.md
backend_gas/: .env.example  main.py
frontend_gas/: index.html  package-lock.json  package.json
frontend_gas/src/: App.vue
frontend_gas/src/assets/: main.css
frontend_gas/src/components/: GasHistoryChart.vue  HeatmapGas.vue  LastReadingCard.vue
frontend_gas/src/router/: index.js
frontend_gas/src/services/: gasApi.ts
frontend_gas/src/views/: AlertsView.vue  DashboardView.vue  RobotsView.vue
ros2_ws/src/robot_gas/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_gas/launch/: robot_gas.launch.py  robot_gas.launch.py.save
ros2_ws/src/robot_gas/robot_gas/: gas_publisher.py  gas_sensor.py  gas_to_influx.py  gas_xy_to_influx.py
ros2_ws/src/robot_gas/robot_gas/install/: local_setup.sh  setup.sh
ros2_ws/src/robot_gas/robot_gas/log/: latest_build
ros2_ws/src/robot_gas/urdf/: robot_gas.urdf
