<?xml version="1.0"?>
<package format="3">
  <name>robot_gas</name>
  <version>0.0.0</version>
  <description>Robot gas sensor package</description>
  <maintainer email="sebas@example.com">Sebas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
<export>
  <build_type>ament_python</build_type>
</export>

</package>


